--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/Seguridad/ComponenteRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/Seguridad/ComponenteRoles.razor
@@ -1,10 +1,13 @@
 ﻿@* @page "/roles" *@
+
+@rendermode InteractiveAuto
+
 @namespace BlazorSeguridad2026.Data.Seguridad
 @using BlazorSeguridad2026.Components.Seguridad
 @using Microsoft.AspNetCore.Identity
 @using Shares.Genericos
 @using Shares.Seguridad
-@rendermode @(new InteractiveServerRenderMode(prerender: false))
+
 @inject IRoleService RoleServiceMio
 @inject NavigationManager Nav
 @inject IContextProvider ContextProvider
@@ -113,7 +116,7 @@
                         else
                         {
                             <button class="btn btn-sm btn-outline-info me-1"
-                                    @onclick="@(() => Nav.NavigateTo($"/roles/{r.Id}/users"))">
+                                    @onclick="@(() => Nav.NavigateTo($"/cliente/roles/{r.Id}/users"))">
                                 Usuarios
                             </button>
                             <button class="btn btn-sm btn-outline-primary me-1"
@@ -229,8 +232,8 @@
             {
                 await ContextProvider.ReadAllContext();
                 var cp = ContextProvider.Copia();
-                cp._AppState.DbKey = "Application";
-                cp._AppState.ConnectionMode = "Api";
+                // cp._AppState.DbKey = "Application";
+                // cp._AppState.ConnectionMode = "Api";
                 var user = new RoleServiceMio(RoleManager, cp, UnitOfWorkFactory);
                 var list = await user.GetAllAsync();
                 if (list is null) return;
