TODO FUNCIONA PERFECTAMENTE CON RESPECTO A LOS COMPONENTE Y PAGINAS DE SEGURIDAD

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Seguridad/PaginaRolUsers.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Seguridad/PaginaRolUsers.razor
@@ -1,4 +1,4 @@
-﻿@page "/cliente/roles/{RoleId:int}/users"
+﻿@page "/seguridad/roles/{RoleId:int}/users"
 
     <ComponenteRolUsers RoleId = "@RoleId" />
 
