--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Seguridad/PaginaUserRoles.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Seguridad/PaginaUserRoles.razor
@@ -1,4 +1,4 @@
-﻿@page "/cliente/users/{UserId:int}/roles" 
+﻿@page "/seguridad/users/{UserId:int}/roles" 
 
     <ComponenteUserRoles UserId="@UserId" />
 
