--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Seguridad/PaginaUsers.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Seguridad/PaginaUsers.razor
@@ -1,4 +1,4 @@
-﻿@page "/cliente/users"
+﻿@page "/seguridad/users"
 @using Microsoft.AspNetCore.Authorization
 @attribute [Authorize]
 <ComponenteUsers />
