--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/NavMenu.razor
@@ -40,12 +40,12 @@
     @if (adminMenuExpanded)
     {
         <div class="nav-item px-4">
-            <NavLink class="nav-link" href="/cliente/users">
+            <NavLink class="nav-link" href="/seguridad/users">
                 <span class="oi oi-people" aria-hidden="true"></span>
                 Usuarios
             </NavLink>
 
-            <NavLink class="nav-link" href="/cliente/roles">
+            <NavLink class="nav-link" href="/seguridad/roles">
                 <span class="oi oi-key" aria-hidden="true"></span>
                 Roles
             </NavLink>
