--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/Seguridad/ComponenteUsers.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Data/Seguridad/ComponenteUsers.razor
@@ -243,7 +243,7 @@
         {
             if (ContextProvider.IsValid())
             {
-                await ContextProvider.ReadAllContext();
+                await ContextProvider.ReadAllContext(true);
                 var cp = ContextProvider.Copia();
                 // cp._AppState.DbKey = "Application";
                 // cp._AppState.ConnectionMode = "Api";
