--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Auth.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/Auth.razor
@@ -1,6 +1,7 @@
 ﻿@page "/auth"
 
-@using BlazorSeguridad2026.Data
+
+@using BlazorSeguridad2026.Base.Modelo
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Identity
 
