--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
@@ -1,11 +1,16 @@
 ﻿@page "/ListaUsuariosCliente"
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender: false))
 
+
+@using BlazorSeguridad2026.Base.Genericos
+@using BlazorSeguridad2026.Base.Seguridad
+
+
+@using BlazorSeguridad2026.Data.Modelo
+@using BlazorSeguridad2026.Data.Servicios
 @using Microsoft.AspNetCore.Authorization
-@using Shares.Genericos
-@using BlazorSeguridad2026.Data
-@using Shares.Seguridad
-@using Shares.Servicios
+
+
 
 @inject IUnitOfWorkFactory UnitOfWorkFactory
 @inject IContextProvider ContextProvider
