--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/_Imports.razor
@@ -8,5 +8,6 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorSeguridad2026.Client
-@using BlazorSeguridad2026.Data.Seguridad
+@using BlazorSeguridad2026.Base.Seguridad
+@using BlazorSeguridad2026.Base.Genericos
 
