--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Account/Pages/ConfirmEmailChange.razor
@@ -1,6 +1,7 @@
 ﻿@page "/Account/ConfirmEmailChange"
 
 @using System.Text
+@using BlazorSeguridad2026.Base.Modelo
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using BlazorSeguridad2026.Data
