--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/MainLayout.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/MainLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@using BlazorSeguridad2026.Data.Seguridad
+@using BlazorSeguridad2026.Base.Seguridad
 
 <div class="page">
     <div class="sidebar">
