mejorando el codigode l detalle delete de usuarions ...

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/DetalleUsuarioCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/DetalleUsuarioCliente.razor
@@ -165,7 +165,7 @@
         else
             scUsuario.AñadirAsync(NewUser, true);
 
-        nav.NavigateTo("/ListaUsuariosCliente");
+        nav.NavigateTo("/ListaUsuariosCliente",forceLoad:false);
     }
 
 
