alguna mejora en la carga de datos ...

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DeleteUsuario.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DeleteUsuario.razor
@@ -1,5 +1,5 @@
 ﻿@page "/DeteteUsuario/{Id:int}"   
-@rendermode @(new InteractiveServerRenderMode(prerender: false))
+@rendermode @(new InteractiveServerRenderMode(prerender: true))
 
 @using BlazorSeguridad2026.Base.Genericos
 @using BlazorSeguridad2026.Base.Seguridad
