--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DetalleUsuario.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DetalleUsuario.razor
@@ -1,6 +1,6 @@
 ﻿@page "/DetalleUsuario"
 @page "/DetalleUsuario/{Id:int}"    //esta página se puede acceder tambien en modo de edición
-@rendermode @(new InteractiveServerRenderMode(prerender: false))
+@rendermode @(new InteractiveServerRenderMode(prerender: true))
 
 
 @using BlazorSeguridad2026.Base.Genericos
