FUNCIONA LA GLOBALIZACION .. EN EL SERVER ..!! BIEN !!

--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/ListaUsuariosCliente.razor
@@ -56,7 +56,7 @@ else
                     <td>@user.Codigo</td>
                     <td>@user.Contexto</td>
                     <td>@user.Password</td>
-                    <td>@user.email</td>
+                    <td>@user.Email</td>
                     <td>@user.TenantId</td>
                     <td><a href="DetalleUsuarioCliente/@user.Id"><i>Edit</i></a></td>
                     <td><a href="DeteteUsuarioCliente/@user.Id"><i>Del</i></a></td>
