--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DeleteUsuario.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DeleteUsuario.razor
@@ -59,8 +59,8 @@
                     <div class="row" style="margin-top:10px">
                         <div class="col-md-12">
                             <label for="email">email #</label>
-                            <input type="text" class="form-control" id="email" @bind-value="NewUser.email" placeholder="enter email ..." />
-                            <ValidationMessage For="@(() => NewUser.email)" />
+                            <input type="text" class="form-control" id="email" @bind-value="NewUser.Email" placeholder="enter email ..." />
+                            <ValidationMessage For="@(() => NewUser.Email)" />
                         </div>
                     </div>
                     <div class="row" style="margin-top:10px">
@@ -163,10 +163,7 @@
         }
         catch (Exception ex)
         {
-            Console.WriteLine("EX: " + ex.GetType().FullName);
-            Console.WriteLine(ex.ToString());
-            Console.WriteLine("INNER: " + ex.InnerException?.GetType().FullName);
-            Console.WriteLine(ex.InnerException?.ToString());
+
             throw;
         }
     }
