--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/ListaUsuarios.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/ListaUsuarios.razor
@@ -50,7 +50,7 @@ else
                     <td>@user.Codigo</td>
                     <td>@user.Contexto</td>
                     <td>@user.Password</td>
-                    <td>@user.email</td>
+                    <td>@user.Email</td>
                     <td>@user.TenantId</td>
                     <td><a href="DetalleUsuario/@user.Id"><i>Edit</i></a></td>
                     <td><a href="DeteteUsuario/@user.Id"><i>Del</i></a></td>
