--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
@@ -13,3 +13,5 @@
 @using BlazorSeguridad2026.Components.Layout
 @using BlazorSeguridad2026.Base.Seguridad
 @using BlazorSeguridad2026.Base.Modelo
+@using BootstrapBlazor.Components   
+
