--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/DeleteUsuarioCliente.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/Pages/DeleteUsuarioCliente.razor
@@ -68,8 +68,8 @@
                     <div class="row" style="margin-top:10px">
                         <div class="col-md-12">
                             <label for="email">email #</label>
-                            <input type="text" class="form-control" id="email" @bind-value="NewUser.email" placeholder="enter email ..." />
-                            <ValidationMessage For="@(() => NewUser.email)" />
+                            <input type="text" class="form-control" id="email" @bind-value="NewUser.Email" placeholder="enter email ..." />
+                            <ValidationMessage For="@(() => NewUser.Email)" />
                         </div>
                     </div>
                     <div class="row" style="margin-top:10px">
