--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/MainLayout.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Layout/MainLayout.razor
@@ -1,9 +1,11 @@
 ﻿@inherits LayoutComponentBase
 @using BlazorSeguridad2026.Base.Seguridad
 
+<BootstrapBlazorRoot>
 <div class="page">
     <div class="sidebar">
         <NavMenu />
+
     </div>
 
     <main>
@@ -17,7 +19,7 @@
 
         <article class="content px-4">
             @Body
-            <BlazorSeguridad2026.Data.Seguridad.MarcaRc1/>
+
         </article>
 
 
@@ -29,4 +31,5 @@
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
-<BlazorSeguridad2026.Data.Seguridad.MarcaRc1 />
+
+</BootstrapBlazorRoot>  
