--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DetalleUsuario.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/Pages/DetalleUsuario.razor
@@ -8,87 +8,93 @@
 @using BlazorSeguridad2026.Data.Modelo
 @using BlazorSeguridad2026.Data.Servicios
 
+
+@using BootstrapBlazor.Components
+
+
 @inject IUnitOfWorkFactory UnitOfWorkFactory 
 @inject IContextProvider ContextProvider 
 
 @inject NavigationManager nav
 @implements IDisposable
 
+@using BibliotecaContextosDb.Resources
+
+
+<p>Prueba recurso: @UsuarioResources.User_Codigo_Label</p>
 
 
 <p>TenantId <strong>@ContextProvider._AppState.TenantId</strong>:</p>
 <p>ContextKeDb <strong>@ContextProvider._AppState.DbKey</strong>:</p>
 <p>ApiName <strong>@ContextProvider._AppState.ApiName</strong>:</p>
 
-<div class="container">
-    @if (NewUser != null)
-    {
-        <EditForm Model="@NewUser" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit" FormName="DetalleUsuarioForm">
-            <DataAnnotationsValidator />
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="row" style="margin-top:10px">
-                        <div class="col-md-12">
-                            <label for="Codigo">Codigo #</label>
-                            <input type="text" class="form-control" id="Codigo" @bind-value="NewUser.Codigo" placeholder="enter codigo ..." />
-                            <ValidationMessage For="@(() => NewUser.Codigo)" />
-                        </div>
-                    </div>
+<CultureSelector></CultureSelector>
 
-                    <div class="row" style="margin-top:10px">
-                        <div class="col-md-12">
-                            <label for="UserName">UsertName #</label>
-                            <input type="text" class="form-control" id="UserName" @bind-value="NewUser.UserName" placeholder="enter UserName ..." />
-                            <ValidationMessage For="@(() => NewUser.UserName)" />
-                        </div>
-                    </div>
+@if (newUserModel is not null){
+    <ValidateForm Model="@newUserModel"
+                  OnValidSubmit="@HandleValidSubmit"
+                  OnInvalidSubmit="@HandleInvalidSubmit"
+                  FormName="DetalleUsuarioForm">
 
-                    <div class="row" style="margin-top:10px">
-                        <div class="col-md-12">
-                            <label for="NivelAcceso">NivelAcceso #</label>
-                            <input type="text" class="form-control" id="NivelAcceso" @bind-value="NewUser.Contexto" placeholder="enter NivelAcceso ..." />
-                            <ValidationMessage For="@(() => NewUser.Contexto)" />
-                        </div>
-                    </div>
+        <EditorForm TModel="UserModel"
+                    Model="@newUserModel"
+                    ItemsPerRow="1"
+                    RowType="RowType.Inline"
+                    LabelAlign="Alignment.Right">
 
-                    <div class="row" style="margin-top:10px">
-                        <div class="col-md-12">
-                            <label for="Password">Password #</label>
-                            <input type="text" class="form-control" id="Password" @bind-value="NewUser.Password" placeholder="enter Password ..." />
-                            <ValidationMessage For="@(() => NewUser.Password)" />
-                        </div>
-                    </div>
+            <FieldItems>
 
-                    <div class="row" style="margin-top:10px">
-                        <div class="col-md-12">
-                            <label for="email">email #</label>
-                            <input type="text" class="form-control" id="email" @bind-value="NewUser.email" placeholder="enter email ..." />
-                            <ValidationMessage For="@(() => NewUser.email)" />
-                        </div>
-                    </div>
-                    <div class="row" style="margin-top:10px">
-                        <div class="col-md-12">
-                            <label for="email">Tenant #</label>
-                            <input type="text" class="form-control" id="tenant" @bind-value="NewUser.TenantId" placeholder="enter tenant ..." />
-                            <ValidationMessage For="@(() => NewUser.TenantId)" />
-                        </div>
-                    </div>
+                <!-- Código -->
+@*                 <EditorItem @bind-Field="@newUserModel.Codigo"
+                            Text="@CodigoLabel" /> *@
 
-                    <button type="submit" class="btn btn-info" style="margin-top:10px">Save</button>
-                    <button type="button" class="btn btn-secondary" @onclick="Cancel" style="margin-top:10px">Cancel</button>
-                </div>
-                @if (displayValidationErrorMessages)
-                {
-                    <div class="col-md-4" style="margin-top:10px">
-                        <label>Validation Messages: </label>
-                        <ValidationSummary />
-                    </div>
-                }
+
+
+                <EditorItem @bind-Field="@newUserModel.Codigo"
+                            Text="@DisplayNameExtensions.GetDisplayName(m => m.Codigo)" />
+                <!-- UserName -->
+                <EditorItem @bind-Field="@newUserModel.UserName" />
+
+
+
+                <!-- NivelAcceso / Contexto -->
+                <EditorItem @bind-Field="@newUserModel.Contexto" />
+
+                <!-- Password -->
+                <EditorItem @bind-Field="@newUserModel.Password"
+                             />
+
+                <!-- Email -->
+                <EditorItem @bind-Field="@newUserModel.Email"
+                             />
+
+                <!-- Tenant -->
+                <EditorItem @bind-Field="@newUserModel.TenantId" />
+
+            </FieldItems>
+        </EditorForm>
+
+        @if (displayValidationErrorMessages)
+        {
+            <div class="mt-2">
+                <ValidationSummary />
             </div>
-    </EditForm>
-    }
+        }
 
-</div>
+        <div class="form-footer mt-3">
+            <Button ButtonType="@ButtonType.Submit"
+                    Color="Color.Primary"
+                    Text="Save" />
+            <Button ButtonType="@ButtonType.Button"
+                    Color="Color.Secondary"
+                    Text="Cancel"
+                    OnClick="@Cancel"
+                    CssClass="ms-2" />
+        </div>
+    </ValidateForm>
+
+}
+
 
 
 @code {
@@ -102,7 +108,9 @@
     private string estadoCliente = "";
     private string estadoServidor;
     bool _isValidContext;
-    public Usuario? NewUser { get; set; }
+    public UserModel? newUserModel { get; set; } = new UserModel();
+
+    public Usuario? newUser { get; set; } = new Usuario();
 
     bool displayValidationErrorMessages;
     bool displayUserAddedToDB;
@@ -153,19 +161,20 @@
         displayUserAddedToDB = true;
         ServicioUsuarios? servicioUsuario = null;
         if (servicioUsuario is null)
-           servicioUsuario = new ServicioUsuarios(ContextProvider, UnitOfWorkFactory);
+            servicioUsuario = new ServicioUsuarios(ContextProvider, UnitOfWorkFactory);
+        newUser.UpdateFromModel(newUserModel);
         if (Id != 0)
-            servicioUsuario.ActualizarAsync(NewUser,true);
+            servicioUsuario.ActualizarAsync(newUser,true);
         else
-            servicioUsuario.AñadirAsync(NewUser,true);
+            servicioUsuario.AñadirAsync(newUser,true);
 
         nav.NavigateTo("javascript:history.back()");
-     
+
         //nav.NavigateTo("/ListaUsuarios");
     }
 
 
-    private void HandleInvalidSubmit(EditContext context)
+    private async Task HandleInvalidSubmit(EditContext context)
     {
         displayValidationErrorMessages = true;
         displayUserAddedToDB = false;
@@ -177,7 +186,7 @@
 
     private async Task CargarAsync()
     {
- 
+
         try
         {
             if (Id != 0)
@@ -187,7 +196,8 @@
                 if (servicioUsuario is null)
                     servicioUsuario = new ServicioUsuarios(ContextProvider, UnitOfWorkFactory);
 
-                NewUser = await servicioUsuario.ObtenerPorIdAsync(Id,true);
+                newUser = await servicioUsuario.ObtenerPorIdAsync(Id,true);
+                newUserModel = newUser.SaveToModel();
             }
             else 
             {
@@ -197,10 +207,7 @@
         }
         catch (Exception ex)
         {
-            Console.WriteLine("EX: " + ex.GetType().FullName);
-            Console.WriteLine(ex.ToString());
-            Console.WriteLine("INNER: " + ex.InnerException?.GetType().FullName);
-            Console.WriteLine(ex.InnerException?.ToString());
+
             throw;
         }
     }
@@ -216,5 +223,7 @@
         // 7. Desuscribirse para evitar fugas de memoria
         ContextProvider.OnContextChanged -= OnContextChangedProxy;
     }
+
+
 }
 
