HASTA QUI TODO BIEN .. PERO EL LENGAJE NO SE COMPARTE CON EL CLIENTE .. !!

--- a/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026.Seguridad/Cultures/CultureSelector.razor
@@ -1,4 +1,4 @@
-﻿@using BlazorSeguridad2026.Base.Culture
+﻿@using BlazorSeguridad2026.Base.Cultures
 @using System.Globalization
 @using BootstrapBlazor.Components
 @inject NavigationManager Navigation
