--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026.Client/_Imports.razor
@@ -10,4 +10,5 @@
 @using BlazorSeguridad2026.Client
 @using BlazorSeguridad2026.Base.Seguridad
 @using BlazorSeguridad2026.Base.Genericos
+@using BlazorSeguridad2026.Base.Cultures
 
