--- a/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
+++ b/BlazorSeguridad2026/BlazorSeguridad2026/BlazorSeguridad2026/Components/_Imports.razor
@@ -14,4 +14,5 @@
 @using BlazorSeguridad2026.Base.Seguridad
 @using BlazorSeguridad2026.Base.Modelo
 @using BootstrapBlazor.Components   
+@using BlazorSeguridad2026.Base.Cultures
 
